1998-09-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Circle): Make argument to setRadius: unsigned.
	Provide Circle class object.

1998-09-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Pixmap): New method setDecorationsFlag:.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Widget): Declare -getParent and -getTopLevel.
	Revert removal of -getWindowGeometry and -setWindowGeometry:, but don't
	document them.
	(Histogram): Declare setXaxisMin:max:step:precision:.

1998-08-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Pixmap): Add setDirectory:.

1998-08-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Pixmap): Revert create:widget: and create:file: addition
	and use setFile: and setWidget: instead.

1998-08-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_Pixmap): Add create:widget: and create:file:.
	Move setRaster: to using phase (still need to make implementation
	synchronize).  Add save:.

1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Graph): Add setRangesXMin:Max:.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (Graph): Arguments to setScaleModeX:Y: are now boolean, not
	integers. 

1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_VarProbeEntry): Replace setProbeType: with setVarProbe:.
	Add getVarProbe.

1998-07-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* gui.h (_GraphElement): New method -setWidth:.

1998-07-01  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* gui.h (Widget): Rename setPositionX:Y: to setX:Y:.  Add new
	methods -getX and -getY.
	(_WindowGeometryRecord): Remove getWindowGeometry and
	setWindowGeometry:.  Remove -describe:.  Add setX:Y:,
	setWidth:Height:, getSizeFlag, getPositionFlag, getWidth,
	getHeight, getX, and getY.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.
